<resources>
    <string name="app_name">MH&amp;IT</string>
    <string name="title_fav">Избранное</string>
    <string name="title_home">Домой</string>
    <string name="title_profile">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites">Избранное</string>
    <string name="atHome">Домой</string>
    <string name="profile">Профиль</string>
    <string name="planer">Планер</string>
    <string name="tests">Тесты</string>
    <string name="articles">Статьи</string>
    <string name="training">Тренажер</string>
    <string name="kalendar">Календарь</string>
    <string name="Events">События:</string>
    <string name="empty_menu">Здесь будут избранные элементы</string>
    <string name="select_fav_menu">Для добавления элемента в избранное, нажмите на ⭐ в верхнем правом углу элемента</string>
    <string name="send_help_mail">Вы можете связаться с нами по адресу: help@mhandit.app</string>
    <string name="mail_report">help@mhandit.app</string>
    <string name="about_MH">\t\t\t\tНесмотря на то, что прямая связь между работой в ИТ и эмоциональным выгоранием ещё не доказана официальной медициной, масштаб этой проблемы очевиден профсообществе. Тематика ментального здоровья специалистов сферы ИТ важна не только с позиции значительных изменений, которые данная сфера вносит в жизни людей, но и ввиду того, что она затрагивает огромные массы людей и общество в целом.\n\n\t\t\t\tНаблюдаемая в сфере ИТ тенденция повышенного эмоционального напряжения, при отсутствии должной профилактики, перерастает в выгорание и депрессию. В связи с этим мобильное приложение направлено на профилактику эмоционального напряжения и профессионального выгорания.\n\n\t\t\t\tМобильное приложения предназначено не только для предоставления актуальной теории и возможности самостоятельного контроля, отслеживания пользователем уровня своего психического здоровья, но и возможности уменьшения психологического напряжения при беспрерывной работе и предоставление возможности переключения на другой вид активности. Что положительно сказывается не только на психологическом уровне, но и на физическом, так как пропадает чувство постоянной усталости, лени; уменьшается частота появления головной и мышечной боли; увеличиваются интерес и мотивация в работе и других сферах деятельности человека, улучшается общее настроения.
</string>
    <string name="app_name_MH_IT"><![CDATA[MH&IT]]></string>
    <string name="podpiska_na_nas_eto">Подписка на нас - это:</string>
    <string name="podpis_1">• Профилактика профессионального выгорания</string>
    <string name="podpis_2">• Контроль настроения и избавление от триггеров</string>
    <string name="podpis_3">• Оценка психологического состояния</string>
    <string name="podpis_4">• Изучение полезной и актуальной теории по психологии</string>
    <string name="podpis_5">• Тренажеры для мозга и мини-игры, развивающие полезные для работы в IT навыки</string>
    <string name="podpis_6">• Рекомендации на основе собранной статистики</string>
    <string name="podpis_7">• Инструменты, помогающие снять эмоциональное напряжение</string>
    <string name="podpis_8">• Планирование целей и задач</string>
    <string name="podpis_price_1">1 месяц - 249,00 ₽</string>
    <string name="podpis_price_2">1 год - 1999,00 ₽</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="check_acc">Уже есть аккаунт?   Войти</string>
    <string name="name_reg">Имя</string>
    <string name="email_reg">Email</string>
    <string name="pass_reg">Пароль</string>
    <string name="sec_pass_reg">Повторите пароль</string>
    <string name="zareg">Зарегистрироваться</string>
    <string name="enter_reg">Войти</string>
    <string name="forg_pass">Забыли пароль?</string>
    <string name="not_acc">Нет аккаунта?   Регистрация</string>
</resources>