<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ForScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bZareg"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="45dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="onClickGoZareg"
                android:text="@string/zareg"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="@+id/SecPass_reg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SecPass_reg"
                app:layout_constraintTop_toBottomOf="@+id/SecPass_reg" />

            <TextView
                android:id="@+id/tRegInf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:textIsSelectable="false"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/Name_reg"
                app:layout_constraintEnd_toEndOf="@+id/firNam2"
                app:layout_constraintStart_toStartOf="@+id/firNam2"
                app:layout_constraintTop_toBottomOf="@+id/firNam2" />

            <TextView
                android:id="@+id/firNam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Name_reg"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/input_reg"
                android:ems="10"
                android:hint="@string/name_reg"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:paddingLeft="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firNam2" />

            <EditText
                android:id="@+id/Email_reg"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_reg"
                android:ems="10"
                android:hint="@string/email_reg"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:paddingLeft="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/Name_reg"
                app:layout_constraintStart_toStartOf="@+id/Name_reg"
                app:layout_constraintTop_toBottomOf="@+id/Name_reg" />

            <EditText
                android:id="@+id/Pass_reg"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_reg"
                android:ems="10"
                android:hint="@string/pass_reg"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/Email_reg"
                app:layout_constraintStart_toStartOf="@+id/Email_reg"
                app:layout_constraintTop_toBottomOf="@+id/Email_reg" />

            <EditText
                android:id="@+id/SecPass_reg"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_reg"
                android:ems="10"
                android:hint="@string/sec_pass_reg"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/Pass_reg"
                app:layout_constraintStart_toStartOf="@+id/Pass_reg"
                app:layout_constraintTop_toBottomOf="@+id/Pass_reg" />

            <TextView
                android:id="@+id/tRegEnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/check_acc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/bZareg"
                app:layout_constraintStart_toStartOf="@+id/bZareg"
                app:layout_constraintTop_toBottomOf="@+id/bZareg" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>