<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Enter_acc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bEnter2"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="252dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="onClickGoEnt"
                android:text="@string/enter_reg"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pass_ent"
                app:layout_constraintStart_toStartOf="@+id/pass_ent"
                app:layout_constraintTop_toBottomOf="@+id/pass_ent" />

            <EditText
                android:id="@+id/email_ent"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/input_reg"
                android:ems="10"
                android:hint="@string/email_reg"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:paddingLeft="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firNam3" />

            <EditText
                android:id="@+id/pass_ent"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_reg"
                android:ems="10"
                android:hint="@string/pass_reg"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/email_ent"
                app:layout_constraintStart_toStartOf="@+id/email_ent"
                app:layout_constraintTop_toBottomOf="@+id/email_ent" />

            <TextView
                android:id="@+id/tEntInf3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:textIsSelectable="false"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_ent"
                app:layout_constraintEnd_toEndOf="@+id/firNam3"
                app:layout_constraintStart_toStartOf="@+id/firNam3"
                app:layout_constraintTop_toBottomOf="@+id/firNam3" />

            <TextView
                android:id="@+id/firNam3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tEntReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/not_acc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/bEnter2"
                app:layout_constraintStart_toStartOf="@+id/bEnter2"
                app:layout_constraintTop_toBottomOf="@+id/bEnter2" />

            <TextView
                android:id="@+id/tEntPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forg_pass"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bEnter2"
                app:layout_constraintEnd_toEndOf="@+id/pass_ent"
                app:layout_constraintStart_toStartOf="@+id/pass_ent"
                app:layout_constraintTop_toBottomOf="@+id/pass_ent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>